--- a/family-platform/package.json
+++ b/family-platform/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.8.2",
+    "@supabase/supabase-js": "^2.50.0",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
