--- a/family-platform/package.json
+++ b/family-platform/package.json
@@ -11,14 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
-    "@prisma/client": "^6.8.2",
-    "@supabase/supabase-js": "^2.50.0",
-    "axios": "^1.9.0",
-    "bcryptjs": "^3.0.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.15.1",
+    "@supabase/ssr": "^0.6.1",
     "next": "15.3.3",
-    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
