--- a/family-platform/package.json
+++ b/family-platform/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.2.0",
     "@supabase/ssr": "^0.6.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.522.0",
     "next": "^14.2.29",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
